--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -17,7 +17,7 @@
       <ion-input type="password"></ion-input>
     </ion-item>
 
-    <button ion-button>Login</button>
+    <button ion-button (click)="login()">Login</button>
   </form>
 
 </ion-content>
