Changed log in component

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,7 +6,7 @@
 -->
 <ion-content padding>
   <form>
-
+    <ion-label header> LOG IN </ion-label>
     <ion-item>
       <ion-label stacked>Username</ion-label>
       <ion-input type="text"></ion-input>
@@ -19,5 +19,4 @@
 
     <button ion-button (click)="login()">Login</button>
   </form>
-
 </ion-content>
