--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,7 +6,7 @@
 -->
 <ion-content padding>
   <form>
-    <ion-label header> LOG IN </ion-label>
+    <!-- <ion-label header> LOG IN </ion-label> -->
     <ion-item>
       <ion-label stacked>Username</ion-label>
       <ion-input type="text"></ion-input>
