--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,9 +4,11 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-content padding>
+<ion-content>
   <form>
     <!-- <ion-label header> LOG IN </ion-label> -->
+    <!-- <ion-content overflow-scroll="false"></ion-content> -->
+
     <ion-item>
       <ion-label stacked>Username</ion-label>
       <ion-input type="text"></ion-input>
@@ -18,5 +20,6 @@
     </ion-item>
 
     <button ion-button (click)="login()">Login</button>
+
   </form>
 </ion-content>
