--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-content>
+<!-- <ion-content> -->
   <form>
     <!-- <ion-label header> LOG IN </ion-label> -->
     <!-- <ion-content overflow-scroll="false"></ion-content> -->
@@ -22,4 +22,4 @@
     <button ion-button (click)="login()">Login</button>
 
   </form>
-</ion-content>
+<!-- </ion-content> -->
