--- a/src/pages/room/room.html
+++ b/src/pages/room/room.html
@@ -20,7 +20,34 @@
       Room 2
     </ion-card-header>
     <ion-card-content>
-      Description 2
+      Description 
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      Room 3
+    </ion-card-header>
+    <ion-card-content>
+      Description 
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      Room 4
+    </ion-card-header>
+    <ion-card-content>
+      Description 
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      Room 5
+    </ion-card-header>
+    <ion-card-content>
+      Description 
     </ion-card-content>
   </ion-card>
 </ion-content>
