Updated login component

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -31,7 +31,16 @@
             <ion-col>
                 <ion-list inset>
 
-                    <ion-img width="200" height="195" src="/assets/imgs/nightowl-no-network.jpg"></ion-img>
+                    <div text-center>
+                        <ion-img width="200" height="196" src="/assets/imgs/nightowl-no-network.jpg"></ion-img>
+                    </div>
+
+                    <ion-title text-center>
+                        Smart Classroom Mobile App
+                    </ion-title>
+
+                    <br>
+
                     <ion-item>
                         <ion-label stacked class="my-label">Username</ion-label>
                         <ion-input type="text"></ion-input>
