--- a/src/pages/room/room.html
+++ b/src/pages/room/room.html
@@ -1,54 +1,53 @@
-<!--
-  Generated template for the RoomPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
+<!-- LIST ROOMS -->
+<!-- This is for prototyping purposes to display different rooms -->
 
 <ion-content>
-  <ion-card>
-    <ion-card-header>
-      Room 1
-    </ion-card-header>
-    <ion-card-content>
-      Description
-    </ion-card-content>
-  </ion-card>
-  
-  <ion-card>
-    <ion-card-header>
-      Room 2
-    </ion-card-header>
-    <ion-card-content>
-      Description 
-    </ion-card-content>
-  </ion-card>
+    <!-- Admin: Will have a searchbar to filter, to avoid scrolling many rooms -->
+    <!-- User: Will only display their designated/assigned room to control -->
 
-  <ion-card>
-    <ion-card-header>
-      Room 3
-    </ion-card-header>
-    <ion-card-content>
-      Description 
-    </ion-card-content>
-  </ion-card>
+    <ion-card (click)="room1()">
+        <ion-card-header>
+            Room 1
+        </ion-card-header>
+        <ion-card-content>
+            Description
+        </ion-card-content>
+    </ion-card>
 
-  <ion-card>
-    <ion-card-header>
-      Room 4
-    </ion-card-header>
-    <ion-card-content>
-      Description 
-    </ion-card-content>
-  </ion-card>
+    <ion-card>
+        <ion-card-header>
+            Room 2
+        </ion-card-header>
+        <ion-card-content>
+            Description
+        </ion-card-content>
+    </ion-card>
 
-  <ion-card>
-    <ion-card-header>
-      Room 5
-    </ion-card-header>
-    <ion-card-content>
-      Description 
-    </ion-card-content>
-  </ion-card>
+    <ion-card>
+        <ion-card-header>
+            Room 3
+        </ion-card-header>
+        <ion-card-content>
+            Description
+        </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+        <ion-card-header>
+            Room 4
+        </ion-card-header>
+        <ion-card-content>
+            Description
+        </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+        <ion-card-header>
+            Room 5
+        </ion-card-header>
+        <ion-card-content>
+            Description
+        </ion-card-content>
+    </ion-card>
+
 </ion-content>
-  
