--- a/src/pages/room/room.html
+++ b/src/pages/room/room.html
@@ -6,6 +6,8 @@
 -->
 
 <ion-content>
+  <button type="button" ion-button (click)="logout()">Logout</button>
+
   <ion-card>
     <ion-card-header>
       Room 1
